[gd_scene load_steps=5 format=3 uid="uid://blkplnvql6420"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_ra1u0"]
[ext_resource type="Texture2D" uid="uid://7hbu6n1tbfyi" path="res://assets/tempFolder/5559852.jpg" id="2_x74db"]

[sub_resource type="SystemFont" id="SystemFont_t1ooj"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_ypsox"]
font_names = PackedStringArray("Impact")

[node name="settings_menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ra1u0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x74db")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 36

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_t1ooj")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_t1ooj")
theme_override_font_sizes/font_size = 32
text = "Volume
"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MuteButton" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 40
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_t1ooj")
theme_override_font_sizes/font_size = 32
text = "Mute Sounds"
icon_alignment = 1
expand_icon = true

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_t1ooj")
theme_override_font_sizes/font_size = 32
alignment = 1
item_count = 3
selected = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 17.0
offset_right = 104.0
offset_bottom = 70.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_ypsox")
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MuteButton" to="." method="_on_mute_button_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
